@@ -1,3 +1,5 @@
+2006/7/27 -- released version 20060727_trunk
+
 2006/7/26 -- released version 20060726_trunk
 
 2006/7/25 -- released version 20060725_trunk
